src/test/deca/context/invalid/created/binary_exp/op_arith/minus_boolean_float.deca
// Description :
//    test minus entre un boolean et un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: L’opérande gauche est de type boolean, L’opérande droite est de type float. Or les opérandes d’un modulo doivent être de type ‘int’

{
boolean a;
float b;
int c = a - b;
}
